Fix mobile hero slider spacing: move food image down and position caption properly

--- a/css/hard-feelings-tacos.webflow.css
+++ b/css/hard-feelings-tacos.webflow.css
@@ -291,6 +291,7 @@
   font-size: 24px;
   font-weight: 500;
   line-height: 29px;
+  margin: 0;
 }
 
 .heading-four.footer-links {
@@ -412,6 +413,7 @@
   font-family: Inter, sans-serif;
   font-size: 16px;
   line-height: 21px;
+  margin: 0;
 }
 
 .paragraph-one.hero-paragraph {
@@ -440,6 +442,7 @@
 
 .paragraph-one.menu-price {
   text-align: center;
+  margin: 0 !important;
 }
 
 .paragraph-one.paragraph-brown {
@@ -592,19 +595,23 @@
   .slider-image-caption {
     font-size: 12px;
     padding: 6px 12px;
-    bottom: 5px;
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 0;
   }
   
   .slider-image-container {
-    margin-top: 200px;
+    margin-top: 100px;
     margin-left: -35px;
-    height: 60%;
+    height: 85%;
     justify-content: center;
     align-items: center;
   }
   
   .slider-image-container img {
-    transform: scale(0.95);
+    transform: scale(0.7);
   }
   
   .nav-logo {
@@ -616,19 +623,23 @@
   .slider-image-caption {
     font-size: 11px;
     padding: 5px 10px;
-    bottom: 0px;
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 0;
   }
   
   .slider-image-container {
-    margin-top: 220px;
+    margin-top: 120px;
     margin-left: -35px;
-    height: 50%;
+    height: 80%;
     justify-content: center;
     align-items: center;
   }
   
   .slider-image-container img {
-    transform: scale(0.85);
+    transform: scale(0.75);
   }
   
   .nav-logo {
@@ -1152,11 +1163,13 @@
   font-family: Inter, sans-serif;
   font-size: 12px;
   line-height: 14px;
+  margin: 0;
 }
 
 .paragraph-two.menu-description {
   color: var(--n-soil);
   text-align: center;
+  margin: 0 !important;
 }
 
 .paragraph-two.footer-copyright {
@@ -1317,6 +1330,7 @@
   width: 100%;
   margin-left: 10px;
   margin-right: 10px;
+  padding-top: 15px;
   display: block;
   position: relative;
   overflow: hidden;
@@ -1325,7 +1339,7 @@
 .menu-img-container {
   object-fit: cover;
   width: 100%;
-  height: 289px;
+  height: 350px;
   position: relative;
 }
 
@@ -1342,7 +1356,24 @@
   width: 100%;
   padding-left: 20px;
   padding-right: 20px;
+  padding-top: 2px;
+  padding-bottom: 15px;
   display: flex;
+}
+
+.menu-text-container * {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+.menu-text-container h1,
+.menu-text-container h2,
+.menu-text-container h3,
+.menu-text-container h4,
+.menu-text-container h5,
+.menu-text-container h6,
+.menu-text-container p {
+  margin: 0 !important;
 }
 
 .menu-price-container {
@@ -1352,13 +1383,18 @@
   display: flex;
 }
 
+.menu-price-container * {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+
 .price-ine {
   background-color: var(--n-soil);
   color: var(--n-soil);
   width: 90px;
   height: 1.5px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 .filter-by {
@@ -2507,12 +2543,13 @@
     margin-left: 0;
     left: 0;
     width: 100%;
+    margin-bottom: 20px;
   }
 
 
   .restaurant-herocontainer {
     margin-top: 24px;
-    gap: 70px;
+    gap: 40px;
     padding-left: 0;
     padding-right: 0;
   }
@@ -2797,14 +2834,14 @@
 
   .restaurant-herocontainer {
     margin-top: 24px;
-    gap: 60px;
+    gap: 30px;
     padding-left: 0;
     padding-right: 0;
   }
 
   .hero-slider-container {
     width: 100%;
-    height: 600px;
+    height: 500px;
     border-radius: 32px;
   }
 
@@ -3157,7 +3194,32 @@
   }
 
   .menu-img-container {
-    height: 220px;
+    height: 280px;
+    margin-top: -50px !important;
+  }
+
+  .menu-item {
+    padding-top: 12px;
+  }
+
+  .menu-text-container {
+    padding-top: 1px;
+    padding-bottom: 12px;
+  }
+
+  .menu-text-container * {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+  }
+
+  .menu-text-container h1,
+  .menu-text-container h2,
+  .menu-text-container h3,
+  .menu-text-container h4,
+  .menu-text-container h5,
+  .menu-text-container h6,
+  .menu-text-container p {
+    margin: 0 !important;
   }
 
   .owners-inner-container {
@@ -3810,6 +3872,35 @@ html, body {
     white-space: nowrap !important;
   }
   
+  .menu-item {
+    padding-top: 12px;
+  }
+
+  .menu-img-container {
+    height: 280px;
+    margin-top: -50px !important;
+  }
+
+  .menu-text-container {
+    padding-top: 1px;
+    padding-bottom: 12px;
+  }
+
+  .menu-text-container * {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+  }
+
+  .menu-text-container h1,
+  .menu-text-container h2,
+  .menu-text-container h3,
+  .menu-text-container h4,
+  .menu-text-container h5,
+  .menu-text-container h6,
+  .menu-text-container p {
+    margin: 0 !important;
+  }
+  
   .slider-paragraph-name-container {
     top: 10px !important;
     left: 50% !important;
@@ -3819,14 +3910,14 @@ html, body {
   }
   
   .slider-image-container {
-    margin-top: 190px !important;
+    margin-top: 120px !important;
     margin-left: 0 !important;
-    height: 55% !important;
+    height: 70% !important;
     width: 100% !important;
   }
   
   .slider-image-container img {
-    transform: scale(0.7) !important;
+    transform: scale(0.6) !important;
   }
 }
 
@@ -3842,13 +3933,18 @@ html, body {
     white-space: nowrap !important;
   }
 
+  .menu-img-container {
+    height: 280px;
+    margin-top: -50px !important;
+  }
+
   .restaurant-herocontainer {
-    gap: 80px !important;
+    gap: 50px !important;
     margin-top: 40px;
   }
   
   .hero-slider-container {
-    height: 550px;
+    height: 450px;
     overflow: visible;
   }
   
@@ -3881,14 +3977,14 @@ html, body {
   }
   
   .slider-image-container {
-    margin-top: 200px !important;
+    margin-top: 140px !important;
     margin-left: 0 !important;
-    height: 50% !important;
+    height: 65% !important;
     width: 100% !important;
   }
   
   .slider-image-container img {
-    transform: scale(0.6) !important;
+    transform: scale(0.5) !important;
   }
 }
 
@@ -3901,6 +3997,11 @@ html, body {
     display: inline-flex !important;
     white-space: nowrap !important;
   }
+
+  .menu-img-container {
+    height: 280px;
+    margin-top: -50px !important;
+  }
   
   .slider-paragraph-name-container {
     top: 5px !important;
@@ -3911,14 +4012,14 @@ html, body {
   }
   
   .slider-image-container {
-    margin-top: 210px !important;
+    margin-top: 150px !important;
     margin-left: 0 !important;
-    height: 45% !important;
+    height: 60% !important;
     width: 100% !important;
   }
   
   .slider-image-container img {
-    transform: scale(0.6) !important;
+    transform: scale(0.5) !important;
   }
 }
 
@@ -3931,6 +4032,11 @@ html, body {
     display: inline-flex !important;
     white-space: nowrap !important;
   }
+
+  .menu-img-container {
+    height: 280px;
+    margin-top: -50px !important;
+  }
   
   .slider-paragraph-name-container {
     top: 5px !important;
@@ -3941,12 +4047,13 @@ html, body {
   }
   
   .slider-image-container {
-    margin-top: 260px !important;
+    margin-top: 180px !important;
     margin-left: -35px !important;
     height: 40% !important;
   }
   
   .slider-image-container img {
-    transform: scale(0.55) !important;
+    transform: scale(0.7) !important;
   }
 }
+
